# Emulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  bus.h  cpu.c  cpu.h  main.c  ram.c  ram.h  rom.c  rom.h
doc/: arch.drawio
sample/: factorial.asm  loop.asm  loop.out
src/: CMakeLists.txt  cpu.c  cpu.h  main.c  ram.c  ram.h  rom.c
src/fs/: fs.c  fs.h
tools/assembler/: main.cpp
